--- a/DSA C-SHARP/DSA C-SHARP.csproj
+++ b/DSA C-SHARP/DSA C-SHARP.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DataStructures\" />
+    <Folder Include="DataStructures\Heap\" />
+    <Folder Include="DataStructures\HashTable\" />
+    <Folder Include="DataStructures\BST %28BinarySearchTree%29\" />
   </ItemGroup>
 
   <ItemGroup>
